
2006-11-17 cjg
 * Removed RequestWrapper
 * Fixed non-cookie login to use db authentication. maybe.
 * Moved DB login code to database, called nicely from 
    $session->valid_login( $user,$pass)

2006-11-17 cjg
 * Fixed bug in redirecting /perl/ if port!=80

2006-11-17 cjg
 * Tidied up field definitions for users & eprints

2006-11-17 cjg
 * XML::DOM no longer encodes " outside of attributes.

2006-11-20 cjg
 * Fixed rendering of language names
 * Added better error reporting if pins in a phrase are not DOM.
 * Started work on edit-subject but it's not really working yet.
 * Added removal request, including it creating a history event.
 * Removed some unused language code.
 * Removed some old cgi scripts.
 * Added a dark border to the mail textarea.

2006-11-20 cjg
 * Added warnings to deposit page.
 * No documents now causes a warning, even if it's legal.

2006-11-20 cjg
 * Fixed typo in requestremoval
 * Added tab in a convert plugin
 * Autocomplete now sends values of all fields in row.
 * Autocomplete now handles absolute id's and block replacement
    (in addition to field-value replacement).
 * Name search now uses all values, not just current field.

2006-11-20 tdb
 * Added wrapper element around <METS> (unsure whether there is
    an 'official' wrapper?)
 * Made openurl error messages more friendly - "not found" is now a
    system phrase
 * Added a show_404 option to handle_404 that, if set in the connection
    notes and is false, suppresses the normal 404 response

2006-11-20 cjg
 * Removed bunch of unused CGI scripts
 * Moved /users/staff/export to users/export so that /users/staff could
    be removed.
 * Tidied help text and plugin-list output for import and export bins.

2006-11-20 cjg
 * Changed METS to call getChildNodes rather than childNodes

2006-11-20 moj
 * Added inital version of event_by_name (passes back the event
    type, but this isn't handled by the autocompleter script 
    yet)